Fixed reverse wrapping & padding for store items below 768px

--- a/styles.css
+++ b/styles.css
@@ -224,7 +224,7 @@ button:hover {
 #store {
   width: auto;
   height: auto;
-  margin: 5px
+  margin: 5px;
   display: flex;
   flex: wrap;
   align-items: flex-start;
@@ -236,7 +236,8 @@ button:hover {
 }
 
 .store-items {
-  flex-wrap: wrap-reverse;
+  flex-wrap: wrap;
+  flex-direction: row;
   border-radius: 8px;
   padding: 15px;
   text-align: center;
@@ -276,10 +277,12 @@ button:hover {
   #store {
     flex-direction: column;
     align-items: center;
+    margin: auto;
   }
 
   .store-items {
     max-width: 100%;
+    padding-left: 15%;
   }
 }
 
